# raycaster

./: .gitignore  CMakeLists.txt  Doxyfile
include/: drawing_functions.h  helper.h  player.h  raycastmap.h  raycastray.h  scaling.h
src/: drawing_functions.c  helper.c  player.c  raycaster_video_capture.c  raycastmap.c  raycastray.c  scaling.c
